crates/analyzer/tests/snapshots/errors__array_non_primitive.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: arrays can only hold primitive types
  ┌─ [snippet]:3:6
  │
3 │   x: (u8, u8)[10]
  │      ^^^^^^^^ can't be stored in an array


